--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ JWT_SECRET=fbg83h5vinv93qvnv
 BSC_RPC_URL=https://bsc-dataseed1.defibit.io/
 BSC_WS_URL=wss://bsc-ws-node.nariox.org:443
 
-BSC_WS=ws://127.0.0.1:8546
-BSC_HTTP=http://127.0.0.1:8545
+ETH_WS=https://mainnet.infura.io/v3/
+ETH_HTTP=https://mainnet.infura.io/v3/
