--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_URL=http://localhost:3000
 MODE=DEV
 JWT_SECRET=fbg83h5vinv93qvnv
-BSC_RPC_URL=https://bsc-dataseed1.defibit.io/
-BSC_WS_URL=wss://bsc-ws-node.nariox.org:443
+BSC_HTTP=https://bsc-dataseed1.defibit.io/
+BSC_WS=wss://bsc-ws-node.nariox.org:443
 
 ETH_WS=https://mainnet.infura.io/v3/
 ETH_HTTP=https://mainnet.infura.io/v3/
