--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ JWT_SECRET=fbg83h5vinv93qvnv
 BSC_HTTP=https://bsc-dataseed1.defibit.io/
 BSC_WS=wss://bsc-ws-node.nariox.org:443
 
-ETH_WS=https://mainnet.infura.io/v3/
-ETH_HTTP=https://mainnet.infura.io/v3/
+ETH_WS=ws://45.77.189.205:8546
+ETH_HTTP=http://45.77.189.205:8545
