--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
-APP_URL=http://localhost:3000
+APP_URL=http://localhost:7777
 MODE=DEV
 JWT_SECRET=fbg83h5vinv93qvnv
-BSC_HTTP=https://bsc-dataseed1.defibit.io/
-BSC_WS=wss://bsc-ws-node.nariox.org:443
+BSC_RPC_URL=https://bsc-dataseed1.defibit.io/
 
 ETH_WS=ws://45.77.189.205:8546
 ETH_HTTP=http://45.77.189.205:8545
+
+ETH_WS_TEST=ws://137.184.155.218:8546
+ETH_HTTP_TEST=http://137.184.155.218:8545
+
+BSC_WS=ws://143.198.189.104:8546
+BSC_HTTP=http://143.198.189.104:8545
