--- a/.env
+++ b/.env
@@ -3,11 +3,5 @@ MODE=DEV
 JWT_SECRET=fbg83h5vinv93qvnv
 BSC_RPC_URL=https://bsc-dataseed1.defibit.io/
 
-ETH_WS=ws://45.77.189.205:8546
-ETH_HTTP=http://45.77.189.205:8545
-
-ETH_WS_TEST=ws://164.92.146.35:8546
-ETH_HTTP_TEST=http://164.92.146.35:8545
-
-BSC_WS=ws://143.198.189.104:8546
-BSC_HTTP=http://143.198.189.104:8545
+BSC_WS=wss://speedy-nodes-nyc.moralis.io/7a6a01434609752cdfc335c5/bsc/mainnet/archive/ws
+BSC_HTTP=https://bsc-dataseed1.defibit.io/
