--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-APP_URL=http://localhost:3000
+APP_URL=http://localhost:8080
 MODE=DEV
 JWT_SECRET=fbg83h5vinv93qvnv
 BSC_RPC_URL=https://bsc-dataseed1.defibit.io/
 
-BSC_WS=wss://speedy-nodes-nyc.moralis.io/7a6a01434609752cdfc335c5/bsc/mainnet/archive/ws
-BSC_HTTP=https://bsc-dataseed1.defibit.io/
+BSC_WS=ws://127.0.0.1:8546
+BSC_HTTP=http://127.0.0.1:8545
